# awibcvote

./: .gitignore
ibceos/: CMakeLists.txt  README.txt
ibceos/include/: ibceos.hpp
ibceos/ricardian/: ibceos.contracts.md
ibceos/src/: CMakeLists.txt  ibceos.cpp
ibcwax/: CMakeLists.txt  README.txt
ibcwax/include/: bridge.hpp  ibcwax.hpp
ibcwax/ricardian/: ibcwax.contracts.md
ibcwax/src/: CMakeLists.txt  ibcwax.cpp
tools/: .env.example  daemon.js  example.json  ibc.js  package.json
tools/lib/: chains.js  eosio_helpers.js  ibc_helpers.js
